# real-product-gallery

./: .gitignore  README.md  pyproject.toml  render.yaml
backend/: db.sqlite3  render.yaml  requirements.txt
backend/accounts/: admin.py  apps.py  models.py  renders.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/product_gallery/: asgi.py  settings.py  urls.py  wsgi.py
backend/products/: Serializer.py  admin.py  models.py  urls.py  utils.py  views.py
backend/products/migrations/: 0001_initial.py  0002_alter_product_status.py  0002_alter_reviewimage_image.py  0002_product_is_approved_alter_product_url.py  0003_alter_reviewimage_image.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  axios.js  main.js
frontend/src/components/: AuthModal.vue  HelloWorld.vue
frontend/src/components/layout/: Footer.vue  NavBar.vue
frontend/src/routers/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: AdminPanel.vue  FeturedProduct.vue  Gallery.vue  GoogleCallback.vue  HomePage.vue  ProductDetail.vue  ProductSubmitionModel.vue  ReviewModel.vue
frontend/src/views/legal/: Dmca.vue  Guidelines.vue  Privacypolicy.vue  TermsOfService.vue
